--- a/style.css
+++ b/style.css
@@ -46,16 +46,15 @@
         padding: 30px;
         font-size: 25px;
     }
-    .cardapio{ background-color:  rgb(129, 30, 30);
+    .cardapio{ background-color:  rgb(136, 10, 10);
     
         }
      .lista{
-        display: flex;
         align-items: center;
         text-align: center;
         padding: 45px;
     justify-content: space-around;}
-    
+    .lista{display: flex;}
     .imagemdelivery {
         width: 20%;
         align-items: center;
