--- a/style.css
+++ b/style.css
@@ -46,8 +46,13 @@
         padding: 30px;
         font-size: 25px;
     }
-    .cardapio{ background-color:  rgb(136, 10, 10);
-    
+    .cardapio{ 
+        background-color:  rgb(136, 10, 10);
+        display: flex;        
+        align-items: center;
+        justify-content: center;
+        border-radius: 2px;
+        color: blueviolet;
         }
      .lista{
         align-items: center;
