--- a/style.css
+++ b/style.css
@@ -51,12 +51,10 @@
         display: flex;        
         
         }
-     .lista{
+     .botao{
         align-items: center;
-        text-align: center;
-        padding: 45px;
-    justify-content: space-around;}
-    .lista{display: inline-block}
+        
+     }
     .imagemdelivery {
         width: 20%;
         align-items: center;
