--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@
     }
     .cardapio{ 
         background-color:  rgb(136, 10, 10);
-        display: flex;        
+        display: block;        
         
         }
      .botao{
