--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@
         padding: 20px;
         align-items: center; 
         border-color: black;   
+        justify-content: space-around;
         
         
      }
