--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@
         background-color: rgba(136, 10, 10, 0.951);
         font-size: 20px;
         color: black;
+        width: 10%;
 
 
      }
