--- a/style.css
+++ b/style.css
@@ -67,9 +67,13 @@
 
 
      }
-     .video{background-color: rgb(136, 10, 10);
-        text-align: center;}
+     .propaganda{
+        background-color: rgb(136, 10, 10);
+        text-align: center;
+        justify-content: center;
+        padding: 25px;
+    }
     .imagemdelivery {
-        width: 20%;
+        width: 15%;
         align-items: center;
     }
