--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@
         background-color: rgb(136, 10, 10);
         text-align: center;
         justify-content: center;
-        padding: 25px;
+        padding: 3em;
     }
     .imagemdelivery {
         width: 15%;
